<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/t_adjust_long"
        android:textAppearance="@style/PageHeader" >

    </TextView>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_ar0"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:hint="96"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_t0"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText2"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:hint="20"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="2" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_t1"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText3"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:hint="20"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="2" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_ar1"
                android:textSize="14dp" >
            </TextView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:gravity="right"
                android:text="96"
                android:textColor="@color/myColor"
                android:textSize="24dp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_ro0"
                android:textSize="14dp" >
            </TextView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:gravity="right"
                android:text="0,807"
                android:textColor="@color/myColor"
                android:textSize="24dp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/t_ro1"
                android:textSize="14dp" >
            </TextView>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:gravity="right"
                android:text="0,807"
                android:textColor="@color/myColor"
                android:textSize="24dp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>