<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/power"
        android:textAppearance="@style/PageHeader" >
    </TextView>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/nomU"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="230"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/nomP"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText2"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="1500"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="4" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/realU"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText3"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:text="220"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="3" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/realP"
                android:textSize="14dp" >
            </TextView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:gravity="right"
                android:text="1372"
                android:textColor="@color/myColor"
                android:textSize="24dp"
                android:textStyle="bold" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>