<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dist_caption"
        style="@style/PageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/distillation"
        android:textAppearance="@style/PageHeader"
        android:textColor="@color/myColor" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dist_braga" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:text="3" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dist_begin_t"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="92" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:text="10.9"
                android:textAppearance="@style/PageHeader"
                android:textColor="@color/myColor" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dist_obp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dist_end_t"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="2"
                android:text="98" >
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:text="2.2"
                android:textAppearance="@style/PageHeader"
                android:textColor="@color/myColor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/dist_obp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_res_s" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="42"
            android:textAppearance="@style/PageHeader"
            android:textColor="@color/myColor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_res_v" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:text="0.672"
            android:textAppearance="@style/PageHeader"
            android:textColor="@color/myColor" />
    </LinearLayout>

</LinearLayout>