<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/fruit_name" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_sugar" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center_vertical|right"
                android:hint="18"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="2"
                android:minEms="3"
                android:selectAllOnFocus="true"
                android:text="18" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_real_spirit" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="10"
                android:textAppearance="@style/PageHeader" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_wish_spirit" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center_vertical|right"
                android:imeOptions="actionDone"
                android:hint="12"
                android:inputType="number"
                android:maxLength="2"
                android:minEms="3"
                android:selectAllOnFocus="true"
                android:text="12" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_juice_volume" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center_vertical|right"
                android:imeOptions="actionDone"
                android:hint="30"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:minEms="3"
                android:selectAllOnFocus="true"
                android:text="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_add_sugar" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="0.85"
                android:textAppearance="@style/PageHeader" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_add_water" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="0.0"
                android:textAppearance="@style/PageHeader" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fr_volume_itog" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="10.6"
                android:textAppearance="@style/PageHeader" />
        </TableRow>
    </TableLayout>

</LinearLayout>